# tarea-streamlit

./: .gitignore  README.md
app/: Dockerfile  app.py  docker-compose.yml  model.keras  pyproject.toml
parte0/: entrenamiento_modelo.ipynb  entrenamiento_modelo.py  pyproject.toml
