[tool.poetry]
name = "parte0"
version = "0.1.0"
description = "Entrenamiento y serialización del modelo CIFAR-10"
authors = ["Javier Gómez C <jaogomezco@gmail.com.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tensorflow = "^2.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
